<resources>
    <string name="app_name">Hammered</string>
    <string name="cocktails">Cocktails</string>
    <string name="ingredients">Ingredients</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logo_image">Logo Image</string>
    <string name="create_cocktail">Create Cocktail</string>
    <string name="create_ingredient">Create Ingredient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktail_detail_desc">Image of the drink</string>
    <string name="all_drinks">All Drinks</string>
    <string name="my_drinks">My Drinks</string>
    <string name="favorite_drinks">Favorite Drinks</string>
    <string name="all_ingredients">All ingredients</string>
    <string name="my_stock">My Stock</string>
    <string name="shopping_cart">Shopping List</string>
    <string name="cross_description">Cross to remove item from cart</string>
    <string name="tick_info">You have ingredients to make this drink.</string>
    <string name="not_in_stock_msg">You do not have %1$s</string>
    <string name="used_in_msg">Used in %1$s.</string>
    <string name="used_in_num_msg">Used in %1$d drinks.</string>
    <string name="quantity">%1$d %2$s</string>
    <string name="quantity_f">%1$.2f %2$s</string>
    <string name="cocktail_glass">Cocktail Glass</string>
    <string name="drink_empty_msg">Nothing to see here. Cheers!</string>
    <string name="empty_drink_msg">There are no drinks here.</string>
    <string name="cocktail_is_favourite">Cocktail is favourite.</string>
    <string name="edit_cocktail">Edit cocktail</string>
    <string name="used_in">%1$s is used in :</string>
    <string name="ingredient_name_edit_text">Ingredient Name…</string>
    <string name="ingredient_description_edit_text">Ingredient Description</string>
    <string name="add_ingredient_check_msg">You have this ingredient in stock.</string>
    <string name="fab_desc">Add ingredient.</string>
    <string name="add_ingredient_image">Add ingredient image</string>
    <string name="all_ingredient_check_msg">Ingredient is in stock.</string>
    <string name="cocktail_description">Cocktail description</string>
    <string name="cocktail_name_hint">Cocktail Name</string>
    <string name="quantity_string">Quantity</string>
    <string name="optional">Optional</string>
    <string name="garnish">Garnish</string>
    <string name="remove">Remove</string>
    <string name="add_step">Add step</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add_step_hint">Add step…</string>
    <string name="remove_step_desc">Remove the current step.</string>
    <string name="following_ingredients_required">The following ingredients are required:</string>
    <string name="create_cocktail_toolbar">Create Cocktail</string>
    <string name="create_cocktail_back">Cancel creating cocktail and go back.</string>
    <string name="cancel_creating_ingredient">Cancel creating ingredient and go back.</string>
    <string name="create_ingredient_toolbar">Create Ingredient</string>
    <string name="warning">Warning!</string>
    <string name="ingredient_name_empty">Ingredient name cannot be empty!</string>
    <string name="ingredient_exists">An ingredient with a similar name already exists!!</string>
    <string name="title_search">Search</string>
    <string name="delete_cocktail">Delete Cocktail</string>
    <string name="copy_and_edit">Copy and edit</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="delete_ingredient_message">Doing this will remove this ingredient and all the references to it. Do you still want to delete this ingredient?</string>
    <string name="delete_cocktail_message">Doing this will remove this cocktail and all the references to it. Do you still want to continue?</string>
    <string name="startup_screen">Startup Screen.</string>
    <string name="default_startup_screen">All drinks</string>
    <string name="startup_dialog_title">Choose what will appear at startup.</string>
    <string name="export_all">Export all drinks and ingredients.</string>
    <string name="export_info_text">Export all the drinks and ingredient in a file that can be saved or imported later.</string>
    <string name="saving_data">Saving data…</string>
    <string name="import_title">Import drinks and ingredients.</string>
    <string name="import_settings_info">Import drinks and ingredients from a directory.</string>
    <string name="import_image_text">Import images if they are available.</string>
    <string name="replace_existing_switch_text">Replace existing drinks and ingredients.</string>
    <string name="import_btn_text">Import</string>
    <string name="delete_everything">Delete everything.</string>
    <string name="delete_info_text">Delete every drinks and ingredient.</string>
    <string name="reset">Reset</string>
    <string name="reset_info_text">Reset the data and the app to it\'s initial state.</string>
    <string name="permission_required">Permission Required!</string>
    <string name="permission_msg_text">To use this feature, this app will require storage permissions. You have not granted this permission. If you wish to use this feature, please go to the app\'s settings and grant storage permission.</string>
    <string name="required_permission_msg">You\'ll need to grant storage permission to use this feature. Do you wish to continue?</string>
    <string name="about_desc">An application that will help you create your favorite drinks. Enjoy Responsibly!!</string>
    <string name="importing_data">Importing data…</string>
    <string name="mixer">Mixer</string>
    <string name="selected_desc">An ingredient was selected</string>
    <string name="select_ingredients">Select Ingredients:</string>
    <string name="selected_cocktail_text">You can create the following cocktails:</string>
    <string name="mixer_settings">Mixer Settings</string>
    <string name="mixer_setting_info">Select what happens when you click on an ingredient on the mixer.</string>
    <string name="show_all_text">Show the all the cocktails that contain selected ingredients.</string>
    <string name="show_combination_text">Only show the cocktails that contain the combination of all selected ingredients.</string>
    <string name="save">Save</string>
    <string name="delete_info">Delete current ingredient.</string>
    <string name="edit_current_ingredient">Edit current ingredient.</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="file">File</string>
    <string name="temp">Temp</string>
    <string name="add_a_new_step">Add a new step…</string>
    <string name="edit_step">Edit step</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="placeholder_1">Placeholder image with red cocktail and straws.</string>
    <string name="placeholder_2">Placeholder image with lemon.</string>
    <string name="select_an_image">Select an Image.</string>
    <string name="start_play">Start playing step slides.</string>
    <string name="frame_desc">Frame for about page.</string>
    <string name="slide_desc">The following ingredients are used in this step:</string>
    <string name="hammer_me">Hammer Me</string>
    <string name="close">Close</string>
    <string name="hammer_me_msg">I barely know you. On a serious note you should probably use the app a bit more to get better recommendation. In the mean time enjoy this random drink.</string>
    <string name="recommendation_heading">Hammer you?</string>
    <string name="rec_msg">Based on your previous interaction you will probably like these drinks:</string>
    <string name="empty_list_msg">Ummm… Looks like there are no drinks available at the moment. Perhaps you should add some :)</string>
    <string name="glass_toasting_gif">Glass toasting gif</string>
    <string name="attr_heading">The following libraries and assets require attributions:</string>
    <string name="dev_info">© 2022 p0ppy-fl0w3r -</string>
    <string name="attributions"><u>Attributions</u></string>
    <string name="voice_commands">Voice Commands</string>
    <string name="enable_voice">Enable voice command on slides.</string>
    <string name="search_online">Search Online</string>
    <string name="select_a_vendor">Select a vendor</string>
    <string name="select_an_option">Select an option</string>
    <string name="save_cocktail">Save Cocktail</string>
    <string name="save_ingredient">Save Ingredient</string>
    <string name="close_slide">Close Slide</string>
    <string name="about_ingredient">About Ingredient</string>
    <string name="dialog_ingredient_name">Ingredient Name:</string>
</resources>