<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/createItemGroup">
        <item
            android:title="@string/title_search"
            android:id="@+id/searchItem"
            android:icon="@drawable/ic_search"
            app:showAsAction="always"
            app:actionViewClass="android.widget.SearchView" />
        <item
            android:id="@+id/createCocktail"
            android:title="@string/create_cocktail" />
        <item
            android:id="@+id/createIngredient"
            android:title="@string/create_ingredient" />
    </group>
    <group android:id="@+id/optionSettingsGroup">
        <item
            android:id="@+id/settingsOption"
            android:title="@string/settings" />
        <item
            android:id="@+id/aboutOption"
            android:title="@string/about"
            android:orderInCategory="10"/>
    </group>
</menu>