<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:context=".ingredients.createIngredient.CreateIngredientFragment">

        <EditText
            android:id="@+id/textIngredientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ingredient_name_edit_text"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            app:layout_constraintEnd_toStartOf="@+id/addIngredientImage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/addIngredientImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/add_ingredient_image"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="@+id/textIngredientName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textIngredientName"
            app:layout_constraintTop_toTopOf="@+id/textIngredientName" />

        <EditText
            android:id="@+id/ingredientDescriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/detail_text_back"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/ingredient_description_edit_text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textIngredientName" />

        <CheckBox
            android:id="@+id/createInStock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient_check_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientDescriptionText" />

        <Button
            android:id="@+id/createSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createInStock" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>