<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="18dp"
    android:orientation="vertical">

    <TextView
        style="@style/DialogHeadingStyle"
        android:background="@drawable/detail_text_back"
        android:text="@string/about_ingredient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ingredient_name"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ingredientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textSize="18sp"
            tools:text="Big Apple" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/ingredientDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="14sp"
            tools:text="@string/ingredient_name_empty" />
    </ScrollView>

</LinearLayout>