<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ingredients.IngredientFragment">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/ingredient_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMyStock"
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/my_stock" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAllIngredient"
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_ingredients" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipShoppingCart"
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_cart" />
            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/all_ingredient_item" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>